--- a/.github/workflows/combine-zip.yml
+++ b/.github/workflows/combine-zip.yml
@@ -1,9 +1,6 @@
 name: Combine Zip Files
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:  # Allows manual triggering of the workflow
 
 jobs:
@@ -13,11 +10,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          ref: 'main/01.525 - BETA - very minor patch'
 
-      - name: Combine split zip files
+      - name: Navigate to the directory
         run: |
+          cd "01.525 - BETA - very minor patch" || exit 1
+          # Combine split zip files
           cat thmj4n.zip.* > thmj4n.zip
 
       - name: Create Release
@@ -35,6 +32,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: thmj4n.zip
+          asset_path: "01.525 - BETA - very minor patch/thmj4n.zip"  # Path to the combined zip file
           asset_name: thmj4n.zip
           asset_content_type: application/zip
