--- a/.github/workflows/combine-zip.yml
+++ b/.github/workflows/combine-zip.yml
@@ -15,7 +15,7 @@ jobs:
         id: find_version
         run: |
           # Extract version numbers from directory names
-          version_dirs=$(ls -d */ | grep -oP '\d+\.\d+\.\d+')
+          version_dirs=$(ls -d */ | grep -oP '^\d+\.\d+')
           highest_version=$(echo "$version_dirs" | sort -V | tail -n 1)
           echo "Highest version found: $highest_version"
           echo "::set-output name=highest_version::$highest_version"
@@ -37,7 +37,7 @@ jobs:
 
       - name: Navigate to the directory and combine zip files
         run: |
-          cd "${{ steps.find_version.outputs.highest_version }}" || exit 1
+          cd "${{ steps.find_version.outputs.highest_version }} - BETA - very minor patch" || exit 1
           # Combine split zip files
           combined_zip_name="thmj4n ${steps.find_version.outputs.highest_version}.zip"
           cat thmj4n.zip.* > "$combined_zip_name"
@@ -46,4 +46,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: combined-zip
-          path: "${{ steps.find_version.outputs.highest_version }}/thmj4n ${steps.find_version.outputs.highest_version}.zip"  # Path to the combined zip file
+          path: "${{ steps.find_version.outputs.highest_version }} - BETA - very minor patch/thmj4n ${steps.find_version.outputs.highest_version}.zip"  # Path to the combined zip file
