--- a/.github/workflows/combine-zip.yml
+++ b/.github/workflows/combine-zip.yml
@@ -36,10 +36,28 @@ jobs:
           cat thmj4n.zip.* > "$combined_zip_name"
 
       - name: Upload Combined Zip as Artifact
+        id: upload_artifact
         uses: actions/upload-artifact@v2
         with:
           name: combined-zip
           path: "${{ steps.find_directory.outputs.dir_name }}/$combined_zip_name"  # Path to the combined zip file
+
+      - name: Add lesser versions to .gitignore and remove from index
+        run: |
+          # Get all version directories
+          version_dirs=$(ls -d */ | grep -oP '^\d+\.\d+')
+          # Loop through each version directory
+          for version in $version_dirs; do
+            # Check if the version is less than the highest version
+            if [[ $(echo -e "${version}\n${{ steps.find_version.outputs.highest_version }}" | sort -V | head -n 1) == "$version" ]]; then
+              echo "Adding $version to .gitignore"
+              echo "$version *" >> .gitignore  # Add to .gitignore
+              git rm -r --cached "$version"  # Remove from index
+            fi
+          done
+          # Commit changes to .gitignore
+          git add .gitignore
+          git commit -m "Update .gitignore to exclude lesser version directories"
 
       - name: Delete old artifacts
         env:
@@ -49,8 +67,12 @@ jobs:
           artifacts=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
             "https://api.github.com/repos/${{ github.repository }}/actions/artifacts")
           
-          # Parse the artifact names and delete them
-          echo "$artifacts" | jq -r '.artifacts[] | .id' | while read -r artifact_id; do
+          # Get the name of the most recent artifact
+          current_artifact_name="combined-zip"
+          current_artifact_id=$(echo "$artifacts" | jq -r --arg name "$current_artifact_name" '.artifacts[] | select(.name == $name) | .id')
+
+          # Parse the artifact names and delete them, excluding the current artifact
+          echo "$artifacts" | jq -r '.artifacts[] | select(.id != $current_artifact_id) | .id' | while read -r artifact_id; do
             echo "Deleting artifact with ID: $artifact_id"
             curl -X DELETE -H "Authorization: token $GITHUB_TOKEN" \
               "https://api.github.com/repos/${{ github.repository }}/actions/artifacts/$artifact_id"
