--- a/.github/workflows/combine-zip.yml
+++ b/.github/workflows/combine-zip.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  # Updated to v3
 
       - name: Find highest version number
         id: find_version
@@ -18,30 +18,30 @@ jobs:
           version_dirs=$(ls -d */ | grep -oP '^\d+\.\d+')
           highest_version=$(echo "$version_dirs" | sort -V | tail -n 1)
           echo "Highest version found: $highest_version"
-          echo "::set-output name=highest_version::$highest_version"
+          echo "highest_version=$highest_version" >> $GITHUB_ENV  # Set output using environment file
 
       - name: Find the actual directory name
         id: find_directory
         run: |
           # Find the actual directory name that matches the highest version
-          dir_name=$(ls -d "${{ steps.find_version.outputs.highest_version }} "* | head -n 1)
+          dir_name=$(ls -d "${{ env.highest_version }} "* | head -n 1)
           echo "Directory name found: $dir_name"
-          echo "::set-output name=dir_name::$dir_name"
+          echo "dir_name=$dir_name" >> $GITHUB_ENV  # Set output using environment file
 
       - name: Navigate to the directory and combine zip files
         id: combine_zip
         run: |
-          cd "${{ steps.find_directory.outputs.dir_name }}" || exit 1
+          cd "${{ env.dir_name }}" || exit 1
           # Combine split zip files
-          combined_zip_name="thmj4n ${{ steps.find_version.outputs.highest_version }}.zip"
+          combined_zip_name="thmj4n ${{ env.highest_version }}.zip"
           cat thmj4n.zip.* > "$combined_zip_name"
           echo "Combined zip file created: $combined_zip_name"
-          echo "::set-output name=combined_zip_name::$combined_zip_name"
+          echo "combined_zip_name=$combined_zip_name" >> $GITHUB_ENV  # Set output using environment file
 
       - name: Upload Combined Zip as Artifact
         id: upload_artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4  # Updated to v4
         with:
           name: combined-zip
-          path: "${{ steps.find_directory.outputs.dir_name }}/${{ steps.combine_zip.outputs.combined_zip_name }}"  # Path to the combined zip file
-          expires_in: 24h  # Set the artifact to expire in 24 hours
+          path: "${{ env.dir_name }}/${{ env.combined_zip_name }}"  # Path to the combined zip file
+          retention-days: 1  # Set the artifact to expire in 1 day (24 hours)
