--- a/.github/workflows/combine-zip.yml
+++ b/.github/workflows/combine-zip.yml
@@ -50,8 +50,8 @@ jobs:
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          tag: ${{ env.highest_version }}  # Use the highest version as the tag
-          release_name: "Release ${{ env.highest_version }}"  # Set the release name
+          tag_name: ${{ env.highest_version }}  # Use the highest version as the tag
+          name: "Release ${{ env.highest_version }}"  # Set the release name
           body: "This release includes the combined zip file for version ${{ env.highest_version }}."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -59,7 +59,7 @@ jobs:
       - name: Upload Combined Zip as Release Asset
         uses: softprops/action-gh-release@v1
         with:
-          tag: ${{ env.highest_version }}  # Ensure this matches the tag used in the previous step
+          tag_name: ${{ env.highest_version }}  # Ensure this matches the tag used in the previous step
           files: "${{ env.dir_name }}/${{ env.combined_zip_name }}"  # Path to the combined zip file
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
