--- a/.github/workflows/combine-zip.yml
+++ b/.github/workflows/combine-zip.yml
@@ -14,9 +14,8 @@ jobs:
       - name: Find highest version number
         id: find_version
         run: |
-          # Extract version numbers from directory names
-          version_dirs=$(ls -d */ | grep -oP '^\d+\.\d+')
-          highest_version=$(echo "$version_dirs" | sort -V | tail -n 1)
+          # Extract version numbers from directory names and find the highest
+          highest_version=$(ls -d */ | grep -oP '^\d+\.\d+' | sort -V | tail -n 1)
           echo "Highest version found: $highest_version"
           echo "highest_version=$highest_version" >> $GITHUB_ENV  # Set output using environment file
 
@@ -28,7 +27,7 @@ jobs:
           echo "Directory name found: $dir_name"
           echo "dir_name=$dir_name" >> $GITHUB_ENV  # Set output using environment file
 
-      - name: Navigate to the directory and combine zip files
+      - name: Combine Zip Files
         id: combine_zip
         run: |
           cd "${{ env.dir_name }}" || exit 1
@@ -46,20 +45,13 @@ jobs:
           path: "${{ env.dir_name }}/${{ env.combined_zip_name }}"  # Path to the combined zip file
           retention-days: 3  # Set the artifact to expire in 3 days (max 90 days)
 
-      - name: Create Release
+      - name: Create Release and Upload Asset
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ env.highest_version }}  # Use the highest version as the tag
           name: "Release ${{ env.highest_version }}"  # Set the release name
           body: "This release includes the combined zip file for version ${{ env.highest_version }}."
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload Combined Zip as Release Asset
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ env.highest_version }}  # Ensure this matches the tag used in the previous step
           files: "${{ env.dir_name }}/${{ env.combined_zip_name }}"  # Path to the combined zip file
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
